# DanticSQL

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: publish-to-release.yml
src/danticsql/: __init__.py  base_model.py  main.py
tests/: example_model.py  test_complex.py  test_dantic.py  test_many2many.py  test_one2many.py  test_sakila.py  utils.py
tests/data/: data.csv
